--- a/nutriloop-langchain/requirements.txt
+++ b/nutriloop-langchain/requirements.txt
@@ -1,6 +1,13 @@
-langchain
-langgraph
-openai
-python-dotenv
-pandas
-numpy
+langchain==1.3.0
+langchain-core==0.3.5
+langchain-openai==0.2.3
+langchain-classic==0.0.4
+langgraph==0.2.24
+
+openai==1.37.0
+python-dotenv==1.0.1
+
+numpy>=1.26
+pandas>=2.2
+
+pytest>=8.0
